--- a/client/views/roastPage.html
+++ b/client/views/roastPage.html
@@ -27,7 +27,7 @@
                                     <img class="hand" social-gplus src="../images/googleplus.png"/>
                                 </p>
                             </div>
-                            <div class="row" style="background-color:#fff;min-height:500px;">
+                            <div class="row" style="background-color:#fff;min-height:560px;">
                                 <div class="col-xs-12 roastDiv" ng-repeat="roast in roasts.slice().reverse()">
                                     <div class="row">
                                         <div class="col-xs-12" style="margin-bottom:10px">
@@ -42,7 +42,7 @@
                                         <div class="col-xs-12" style="font-size:12px;
         margin-top:20px;">
                                             <div>
-                                                <span class="pull-left replyBtn">Reply</span><span class="pull-left replyBtn">Comments</span>
+                                                <span class="pull-left replyBtn" ng-click="replyR(roast)">Reply</span><span class="pull-left replyBtn" ng-click="goToReplies()">Comments</span>
                                                 <div class="appreciateBtn hand pull-right" ng-class="appreciated?'appreciatedBtn':'appreciateBtn'" ng-click="appreciate(roast)">{{appriValue}}</div><span class="appriNo pull-right"><i class="glyphicon glyphicon-thumbs-up"></i>123</span>
                                             </div>
                                         </div> 
