--- a/client/views/QandAlist.html
+++ b/client/views/QandAlist.html
@@ -13,7 +13,7 @@
                     </div>
                     <div class="col-xs-12">
                        	<div class="voteBtn">
-                            Vote Now
+                            View Answers
                         </div>
                     </div>
 	            </div>
