--- a/client/appResources/styles/style.css
+++ b/client/appResources/styles/style.css
@@ -411,7 +411,7 @@ textarea.form-control.textAreaActive {
     font-size: 12px;
     color: black;
     border: 1px solid gray;
-    margin-top: 7px;
+    margin-top: 12px;
     margin-left: -15px;
     padding-top: 3px;
     min-height: 25px;
@@ -451,8 +451,8 @@ textarea.form-control.textAreaActive {
     background-color: #42B9B0;
     margin-top: 10px;
     color:#fff;
-    padding-top: 5px;
-    height: 40px;
+    padding-top: 9px;
+    height: 50px;
     font-size: 20px;
 }
 .Qbtn{
@@ -462,7 +462,7 @@ textarea.form-control.textAreaActive {
     min-height: 45px;
     padding-top: 10px;
     color: #fff;
-    background-color: #009688;
+    background-color: #42B9B0;
     border-radius: 4px;
     font-size: 12px;
     text-align: center;
