--- a/client/views/QandApage.html
+++ b/client/views/QandApage.html
@@ -7,9 +7,17 @@
                         <div class="row">
                             <div class="col-xs-12 borderBtm">
                                 <div class="row"><p class="titleQ"><b>Q.</b> {{questions.question}} ?</p></div>
+                                <div class="row pull-right" style="margin-top:-15px;">
+                                    <p>
+                                        <i class="glyphicon glyphicon-edit pull-left hand" style="font-size:30px;margin-right:15px;color:gray;" ng-click="editQuestion()"></i>
+                                        <img class="hand" social-facebook src="../images/facebook.png"/>
+                                        <img class="hand" social-twitter src="../images/twitter.png"/>
+                                        <img class="hand" social-gplus src="../images/googleplus.png"/>
+                                    </p>
+                                </div>
                             </div>
                             <div class="col-xs-12" ng-hide="showVoteBlock">
-                                <div class="row">
+                                <div class="row">     
                                     <div class="col-xs-5 col-xs-offset-7 Qbtn hand" ng-click="goToCreateQ()">
                                         Ask new Question
                                     </div>
@@ -58,23 +66,9 @@
                                     <div class="row" style="margin-top:20px;border-bottom:1px solid gainsboro">
                                         <p align="center">Total = <b>{{TotalVotes}} Votes</b></p>
                                     </div>
-                                    <div class="col-xs-12" style="margin-top:-5px;margin-bottom:-50px">
-                                        <p class="pull-right">
-                                            <img class="hand" social-facebook src="../images/facebook.png"/>
-                                            <img class="hand" social-twitter src="../images/twitter.png"/>
-                                            <img class="hand" social-gplus src="../images/googleplus.png"/>
-                                        </p>
-                                    </div>
                                 </div>
                             </div>
-                            <div class="col-xs-12" ng-hide="showVotes" style="margin-top:-20px;">
-                                <p class="pull-right">
-                                    <img class="hand" social-facebook src="../images/facebook.png"/>
-                                    <img class="hand" social-twitter src="../images/twitter.png"/>
-                                    <img class="hand" social-gplus src="../images/googleplus.png"/>
-                                </p>
-                            </div>
-                            <div class="col-xs-12 roastDiv" ng-repeat="qna in QandA.slice().reverse() track by $index">
+                            <div class="col-xs-12 roastDiv" ng-repeat="qna in QandA | orderBy:'-createdOn' track by $index">
                                 <div class="row">
                                     <div class="row">
                                         <div class="col-xs-12" style="margin-bottom:10px">
@@ -89,7 +83,8 @@
                                         <div class="col-xs-12" style="font-size:12px;
         margin-top:20px;">
                                                     <div>
-                                                        <span class="pull-left replyBtn" ng-click="replyQ(qna)">Reply</span><span class="pull-left replyBtn" ng-click="goToReplies()">Comments</span>
+                                                        <span class="pull-left replyBtn" ng-click="replyQ(qna)">Reply</span><span class="pull-left replyBtn" ng-click="goToRepliesQ(qna)">Comments</span>
+                                                        <span class="pull-left replyBtn" ng-click="editQComment(qna)">Edit</span>
                                                         <div class="appreciateBtn hand pull-right" ng-class="appreciated?'appreciatedBtn':'appreciateBtn'" ng-click="appreciate(qna)">{{appriValue}}</div><span class="appriNo pull-right">123</span>
                                                     </div>
                                                 </div>
@@ -109,20 +104,28 @@
                                             <div class="row" style="margin-bottom: 15px;">
                                                 <div class="col-xs-12">
                                                     <div class="col-xs-12 col-sm-10 col-md-6 col-lg-6 mLeft48">
-                                                        <p class="pull-right mTop0" style="color:grey">{{qCommentChar}} words left</p>
+                                                        <p class="pull-right mTop0" ng-hide="editBoxQ" style="color:grey">{{qCommentChar}} words left</p>
+                                                        <p class="pull-right mTop0" ng-if="editBoxQ" style="color:grey">{{qCommentChar}} words left</p>
                                                     </div>
                                                 </div>
-                                                <div class="col-xs-4">
+                                                <div class="col-xs-4" ng-hide="editBoxQ">
                                                     <input type="checkbox" ng-click="anonyClicked(value)" ng-checked="true" ng-true-value="Y" ng-false-value="N" ng-model="Qanonymous" ng-disabled="true">Anonymous
                                                     <br>
                                                 </div>
-                                                <div class="col-xs-8">
+                                                <div class="col-xs-8" ng-hide="editBoxQ" >
                                                     <div class="col-xs-12 col-sm-10 col-md-4 col-lg-3 mLeft48">
-                                                        <button type="btn" style="background-color:#009688;color:#fff;width:90px;" class="btn btn-default pull-right" ng-click="post()" ng-disabled="btnDisable">Post</button>
+                                                        <button type="btn" ng-hide="editBox || editBoxQ" style="background-color:#009688;color:#fff;width:90px;" class="btn btn-default pull-right" ng-click="post()" ng-disabled="btnDisable">Post</button>
+                                                        <button type="btn" ng-if="editBox" style="background-color:#009688;color:#fff;width:90px;" class="btn btn-default pull-right" ng-click="updateQcomment()" ng-disabled="btnDisable">Update</button>
                                                         <button type="btn" style="margin-right:10px" ng-click="hideTextArea()" class="btn btn-default pull-right">Cancel</button>
                                                     </div>
                                                 </div>
-                                                <div class="col-xs-12">
+                                                <div class="col-xs-12" ng-if="editBoxQ" >
+                                                    <div class="col-xs-12 col-sm-10 col-md-7 col-lg-6 mLeft48">
+                                                        <button type="btn" style="background-color:#009688;color:#fff;min-width:90px;" class="btn btn-default pull-right" ng-click="updateQuestion()" ng-disabled="btnDisable">Update Question</button>
+                                                        <button type="btn" style="margin-right:10px" ng-click="hideTextArea()" class="btn btn-default pull-right">Cancel</button>
+                                                    </div>
+                                                </div>
+                                                <div class="col-xs-12" ng-hide="editBoxQ">
                                                         <p><b>Note</b>: Your comment will be posted anonymously if you are not Logged In</p>
                                                 </div>
                                             </div>
