--- a/client/views/roastTrending.html
+++ b/client/views/roastTrending.html
@@ -54,7 +54,7 @@
                             </div>
                             <div class="col-xs-12">
                             	<div class="voteBtn">
-                                    Vote Now
+                                    View Answers
                                 </div>
                             </div>
 	                    </div>
