--- a/client/views/QandApage.html
+++ b/client/views/QandApage.html
@@ -6,20 +6,20 @@
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <div class="row">
                             <div class="col-xs-12 borderBtm">
-                                <div class="row"><p class="titleQ"><b>Q.</b> {{questions.question}} ?</p></div>
-                                <div class="row pull-right" style="margin-top:-15px;">
-                                    <p>
-                                        <i class="glyphicon glyphicon-edit pull-left hand" style="font-size:30px;margin-right:15px;color:gray;" ng-click="editQuestion()"></i>
+                                <div class="row"><p class="titleQ"><b>Q.</b> {{questions.question}}?</p></div>
+                                <div class="row" style="margin-bottom:10px;">
+                                    <span class="pull-left hand" style="font-size:13px;padding-top:10px;margin-right:15px;color:gray;" ng-click="editQuestion()">Edit Question</span>
+                                    <span class="pull-right">
                                         <img class="hand" social-facebook src="../images/facebook.png"/>
                                         <img class="hand" social-twitter src="../images/twitter.png"/>
                                         <img class="hand" social-gplus src="../images/googleplus.png"/>
-                                    </p>
+                                    </span>
                                 </div>
                             </div>
                             <div class="col-xs-12" ng-hide="showVoteBlock">
                                 <div class="row">     
                                     <div class="col-xs-5 col-xs-offset-7 Qbtn hand" ng-click="goToCreateQ()">
-                                        Ask new Question
+                                        Ask Question
                                     </div>
                                 </div>
                             </div>
@@ -125,9 +125,9 @@
                                                         <button type="btn" style="margin-right:10px" ng-click="hideTextArea()" class="btn btn-default pull-right">Cancel</button>
                                                     </div>
                                                 </div>
-                                                <div class="col-xs-12" ng-hide="editBoxQ">
+                                                <!-- <div class="col-xs-12" ng-hide="editBoxQ">
                                                         <p><b>Note</b>: Your comment will be posted anonymously if you are not Logged In</p>
-                                                </div>
+                                                </div> -->
                                             </div>
                                         </div>
                                     </div>
