--- a/client/views/replyComments.html
+++ b/client/views/replyComments.html
@@ -3,18 +3,18 @@
         <div class="row"><div class="row" style="background-color:#fff"><div class="col-xs-12">
             <div class="col-xs-12" style="min-height:600px">
                 <div class="row">
-                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-repeat="reply in replyContent">
                         <div class="row">
                             <div class="row">
                                 <div class="col-xs-12" style="margin-bottom:10px;margin-top:20px;">
                                     <div class="row">
                                         <div class="col-xs-12">
-                                            <img class="userIcon" src="../images/user.png" /><b>Satish Mishra</b>
-                                               <p class="roastTime">10 Sept 12:12 AM</p>
+                                            <img class="userIcon" src="{{reply.imgUrl}}" /><b>{{reply.name}}</b>
+                                               <p class="roastTime">{{reply.createdOn}}</p>
                                             </div>
                                         </div>
                                     </div>
-                                <div class="col-xs-12 roastText">Share with your friends to get more and more answers</div>
+                                <div class="col-xs-12 roastText">{{reply.comment}}</div>
                             </div>
                         </div>
                     </div>
@@ -43,7 +43,7 @@
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 fixedTextBox">
                                     <div class="row">
-                                        <textarea type="text" my-maxlength="2000" ng-trim="false" ng-model="comment.comment" ng-focus="showTextArea()" ng-class="postBlockActive?'textAreaActive':'textAreaBox'" class="form-control textAreaBox" placeholder="Write your Reply here"></textarea>
+                                        <textarea type="text" my-maxlength="2000" ng-trim="false" ng-model="repliesQ.comment" ng-focus="showTextArea()" ng-class="postBlockActive?'textAreaActive':'textAreaBox'" class="form-control textAreaBox" placeholder="Write your Reply here"></textarea>
                                     </div>
                                     <div class="row">
                                         <div class="col-xs-12" ng-if="postBlockActive">
@@ -59,13 +59,13 @@
                                                 </div>
                                                 <div class="col-xs-8">
                                                     <div class="col-xs-12 col-sm-10 col-md-4 col-lg-3 mLeft48">
-                                                        <button type="btn" style="background-color:#009688;color:#fff;width:90px;" class="btn btn-default pull-right" ng-click="post()" ng-disabled="btnDisable">Post</button>
+                                                        <button type="btn" style="background-color:#009688;color:#fff;width:90px;" class="btn btn-default pull-right" ng-click="postReply()" ng-disabled="btnDisable">Post</button>
                                                         <button type="btn" style="margin-right:10px" ng-click="hideTextArea()" class="btn btn-default pull-right">Cancel</button>
                                                     </div>
                                                 </div>
-                                                <div class="col-xs-12">
+                                                <!-- <div class="col-xs-12">
                                                         <p><b>Note</b>: Your comment will be posted anonymously if you are not Logged In</p>
-                                                </div>
+                                                </div> -->
                                             </div>
                                         </div>
                                     </div>
@@ -75,4 +75,6 @@
             </div>
        	</div>
     </div>
+</div>
+</div>
 </div>
