--- a/client/views/roastCreate.html
+++ b/client/views/roastCreate.html
@@ -54,10 +54,12 @@
                         <p><b>Write Your Question</b></p>
                         <input type="text" class="form-control" my-maxlength="150" ng-trim="false" ng-model="debate.question1" placeholder="Write your question" />
                         <p class="pull-right mTop0" style="color:grey;margin-bottom:10px;">{{qChar1}} words left</p>
-                        <!-- <div style="margin-top:30px">
-                            <input type="checkbox" ng-model="debate.debate"
-                            ng-true-value="Y" ng-false-value="N" style="margin-right:15px">I want people to <b>Vote</b>for this Question.
-                        </div> -->
+
+                        <p ng-if="showDesc"><b>Describe your Question (optional)</b></p>
+                        <textarea ng-if="showDesc" type="text" my-maxlength="300" ng-trim="false" ng-model="debate.description"
+                        class="form-control" style="width:100%;height:100px;" placeholder="Write Description for your Question (optional)"></textarea>
+                        <p class="pull-right mTop0" ng-if="showDesc" style="color:grey;margin-bottom:10px;">{{qDescChar}} words left</p>
+                        <button type="button" ng-hide="showDesc" ng-click="showDesc = true" class="btn" style="font-size: 12px;margin-top:10px;background-color:#F1F1F1;color:gray;">Add Description</button>
                     </div>
                     <div ng-if="waiting">
                         <img src="../images/loader.gif" class="loader" />
@@ -74,6 +76,13 @@
                         <p><b>Write Your Debatable Question</b></p>
                         <input type="text" class="form-control" my-maxlength="150" ng-trim="false" ng-model="debate.question2" placeholder="Write your Debatable question" />
                         <p class="pull-right mTop0" style="color:grey;margin-bottom:10px;">{{qChar2}} words left</p>
+
+                        <p ng-if="showDesc1"><b>Describe your Question (optional)</b></p>
+                        <textarea ng-if="showDesc1" type="text" my-maxlength="300" ng-trim="false" ng-model="debate.description"
+                        class="form-control" style="width:100%;height:100px;" placeholder="Write Description for your Question (optional)"></textarea>
+                        <p class="pull-right mTop0" ng-if="showDesc1" style="color:grey;margin-bottom:10px;">{{qDescChar}} words left</p>
+
+                        <button type="button" ng-hide="showDesc1" ng-click="showDesc1 = true" class="btn" style="font-size: 12px;margin-top:10px;background-color:#F1F1F1;color:gray;">Add Description</button>
                     </div>
                     <div class="col-xs-12" style="margin-bottom:60px;" ng-hide="showtext">
                         <div class="col-xs-5 voteBtn hand" ng-click="editY()">
