--- a/client/views/roastCreate.html
+++ b/client/views/roastCreate.html
@@ -3,7 +3,7 @@
         <div class="row" style="height:450px">
             <div class="row">
                 <div class="col-xs-12" style="min-height:556px">
-                    <!-- <div class="row">
+                    <div class="row">
                         <div class="col-xs-12 trendingTitle">
                             Create Roast
                         </div>
@@ -44,7 +44,7 @@
                     </div>
                     <div class="col-xs-12">
                         <button type="button" ng-click="postRoast()" class="btn btn-place-primary" ng-disabled="btnDisable">Create Roast</button>
-                    </div> -->
+                    </div>
                     <div class="row">
                         <div class="col-xs-12 trendingTitle" style="margin-top:4px;background-color:#2ECBDE;">
                             Ask a Question
