--- a/client/views/roastPage.html
+++ b/client/views/roastPage.html
@@ -43,6 +43,7 @@
         margin-top:20px;">
                                             <div>
                                                 <span class="pull-left replyBtn" ng-click="replyR(roast)">Reply</span><span class="pull-left replyBtn" ng-click="goToReplies()">Comments</span>
+                                                <span class="pull-left replyBtn" ng-click="editRComment(roast)">Edit</span>
                                                 <div class="appreciateBtn hand pull-right" ng-class="appreciated?'appreciatedBtn':'appreciateBtn'" ng-click="appreciate(roast)">{{appriValue}}</div><span class="appriNo pull-right"><i class="glyphicon glyphicon-thumbs-up"></i>123</span>
                                             </div>
                                         </div> 
@@ -69,13 +70,14 @@
                                             </div>
                                             <div class="col-xs-8">
                                                 <div class="col-xs-12 col-sm-10 col-md-4 col-lg-3 mLeft48">
-                                                    <button type="btn" style="background-color:#009688;color:#fff;width:90px;" class="btn btn-default pull-right" ng-click="postRComment()" ng-disabled="btnDisable">Post</button>
+                                                    <button type="btn" ng-hide="editBox" style="background-color:#009688;color:#fff;width:90px;" class="btn btn-default pull-right" ng-click="postRComment()" ng-disabled="btnDisable">Post</button>
+                                                    <button type="btn" ng-if="editBox" style="background-color:#009688;color:#fff;width:90px;" class="btn btn-default pull-right" ng-click="updateRcomment()" ng-disabled="btnDisable">Update</button>
                                                     <button type="btn" style="margin-right:10px" ng-click="hideTextArea()" class="btn btn-default pull-right">Cancel</button>
                                             </div>
                                         </div>
-                                         <div class="col-xs-12">
+                                         <!-- <div class="col-xs-12">
                                                 <p><b>Note</b>: Your comment will be posted anonymously if you are not Logged In</p>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
