--- a/client/views/replyCommentsR.html
+++ b/client/views/replyCommentsR.html
@@ -59,7 +59,7 @@
                                                 </div>
                                                 <div class="col-xs-8">
                                                     <div class="col-xs-12 col-sm-10 col-md-4 col-lg-3 mLeft48">
-                                                        <button type="btn" style="background-color:#009688;color:#fff;width:90px;" class="btn btn-default pull-right" ng-click="postReplyQ()" ng-disabled="btnDisable">Post</button>
+                                                        <button type="btn" style="background-color:#009688;color:#fff;width:90px;" class="btn btn-default pull-right" ng-click="postReplyR()" ng-disabled="btnDisable">Post</button>
                                                         <button type="btn" style="margin-right:10px" ng-click="hideTextArea()" class="btn btn-default pull-right">Cancel</button>
                                                     </div>
                                                 </div>
