--- a/client/views/replyCommentsR.html
+++ b/client/views/replyCommentsR.html
@@ -43,7 +43,7 @@
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 fixedTextBox">
                                     <div class="row">
-                                        <textarea type="text" my-maxlength="2000" ng-trim="false" ng-model="repliesQ.comment" ng-focus="showTextArea()" ng-class="postBlockActive?'textAreaActive':'textAreaBox'" class="form-control textAreaBox" placeholder="Write your Reply here"></textarea>
+                                        <textarea type="text" my-maxlength="2000" ng-trim="false" ng-model="repliesR.comment" ng-focus="showTextArea()" ng-class="postBlockActive?'textAreaActive':'textAreaBox'" class="form-control textAreaBox" placeholder="Write your Reply here"></textarea>
                                     </div>
                                     <div class="row">
                                         <div class="col-xs-12" ng-if="postBlockActive">
