--- a/client/views/roastPage.html
+++ b/client/views/roastPage.html
@@ -42,7 +42,7 @@
                                         <div class="col-xs-12" style="font-size:12px;
         margin-top:20px;">
                                             <div>
-                                                <span class="pull-left replyBtn" ng-click="replyR(roast)">Reply</span><span class="pull-left replyBtn" ng-click="goToReplies()">Comments</span>
+                                                <span class="pull-left replyBtn" ng-click="replyR(roast)">Reply</span><span class="pull-left replyBtn" ng-click="goToRepliesR(roast)">Comments</span>
                                                 <span class="pull-left replyBtn" ng-click="editRComment(roast)">Edit</span>
                                                 <div class="appreciateBtn hand pull-right" ng-class="appreciated?'appreciatedBtn':'appreciateBtn'" ng-click="appreciate(roast)">{{appriValue}}</div><span class="appriNo pull-right"><i class="glyphicon glyphicon-thumbs-up"></i>123</span>
                                             </div>
