--- a/client/views/QandApage.html
+++ b/client/views/QandApage.html
@@ -8,7 +8,7 @@
                             <div class="col-xs-12 borderBtm">
                                 <div class="row"><p class="titleQ"><b>Q.</b> {{questions.question}}?</p></div>
                                 <div class="row" style="margin-bottom:10px;">
-                                    <span class="pull-left hand" style="font-size:13px;padding-top:10px;margin-right:15px;color:gray;" ng-click="editQuestion()">Edit Question</span>
+                                    <span class="pull-left hand" style="font-size:13px;padding-top:10px;margin-right:15px;color:gray;" ng-click="editQuestion(questions)">Edit Question</span>
                                     <span class="pull-right">
                                         <img class="hand" social-facebook src="../images/facebook.png"/>
                                         <img class="hand" social-twitter src="../images/twitter.png"/>
@@ -85,7 +85,7 @@
                                                     <div>
                                                         <span class="pull-left replyBtn" ng-click="replyQ(qna)">Reply</span><span class="pull-left replyBtn" ng-click="goToRepliesQ(qna)">Comments</span>
                                                         <span class="pull-left replyBtn" ng-click="editQComment(qna)">Edit</span>
-                                                        <div class="appreciateBtn hand pull-right" ng-class="appreciated?'appreciatedBtn':'appreciateBtn'" ng-click="appreciate(qna)">{{appriValue}}</div><span class="appriNo pull-right">123</span>
+                                                        <!-- <div class="appreciateBtn hand pull-right" ng-class="appreciated?'appreciatedBtn':'appreciateBtn'" ng-click="appreciate(qna)">{{appriValue}}</div><span class="appriNo pull-right">123</span> -->
                                                     </div>
                                                 </div>
                                         
@@ -109,7 +109,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-xs-4" ng-hide="editBoxQ">
-                                                    <input type="checkbox" ng-click="anonyClicked(value)" ng-checked="true" ng-true-value="Y" ng-false-value="N" ng-model="Qanonymous" ng-disabled="true">Anonymous
+                                                    <input type="checkbox" ng-model="comment.anonymous" ng-checked="anony" ng-true-value="Y" ng-false-value="N" ng-model="Qanonymous" ng-disabled="anony">Anonymous
                                                     <br>
                                                 </div>
                                                 <div class="col-xs-8" ng-hide="editBoxQ" >
