--- a/client/views/replyCommentsR.html
+++ b/client/views/replyCommentsR.html
@@ -54,7 +54,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-xs-4">
-                                                    <input type="checkbox" ng-click="anonyClicked(value)" ng-checked="true" ng-true-value="Y" ng-false-value="N" ng-model="roast.anonymous" ng-disabled="true">Anonymous
+                                                    <input type="checkbox" ng-checked="anony" ng-true-value="Y" ng-false-value="N" ng-model="repliesR.anonymous" ng-disabled="anony">Anonymous
                                                     <br>
                                                 </div>
                                                 <div class="col-xs-8">
