--- a/client/views/roastPage.html
+++ b/client/views/roastPage.html
@@ -27,6 +27,11 @@
                                     <img class="hand" social-gplus src="../images/googleplus.png"/>
                                 </p>
                             </div>
+                            <div class="col-xs-12" style="margin-top:-20px;color:gray">
+                                <p class="pull-right">
+                                    <b>{{roastTitle.views}}</b> Views
+                                </p>
+                            </div>
                             <div class="row" style="background-color:#fff;min-height:560px;">
                                 <div class="col-xs-12 roastDiv" ng-repeat="roast in roasts | orderBy:'-createdOn'">
                                     <div class="row">
