--- a/client/views/QandApage.html
+++ b/client/views/QandApage.html
@@ -6,7 +6,12 @@
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <div class="row">
                             <div class="col-xs-12 borderBtm">
-                                <div class="row"><p class="titleQ"><b>Q.</b> {{questions.question}}?</p></div>
+                                <div class="row">
+                                    <p style="margin-bottom:-30px;text-align:right;color:gray;font-size:15px;">
+                                        <b>{{questions.views}}</b> Views
+                                    </p>
+                                    <p class="titleQ"><b>Q.</b> {{questions.question}}?</p>
+                                </div>
                                 <div class="row" style="margin-bottom:10px;">
                                     <span class="pull-left hand" style="font-size:13px;padding-top:10px;margin-right:15px;color:gray;" ng-click="editQuestion(questions)">Edit Question</span>
                                     <span class="pull-right">
