--- a/client/views/QandApage.html
+++ b/client/views/QandApage.html
@@ -7,10 +7,12 @@
                         <div class="row">
                             <div class="col-xs-12 borderBtm">
                                 <div class="row">
-                                    <p style="margin-bottom:-30px;text-align:right;color:gray;font-size:15px;">
+                                    <p class="titleQ"><b>Q.</b> {{questions.question}}?</p>
+                                </div>
+                                <div>
+                                    <p style="margin-bottom:10px;margin-top:-15px;;text-align:right;color:gray;font-size:15px;">
                                         <b>{{questions.views}}</b> Views
                                     </p>
-                                    <p class="titleQ"><b>Q.</b> {{questions.question}}?</p>
                                 </div>
                                 <div class="row" style="margin-bottom:10px;">
                                     <span class="pull-left hand" style="font-size:13px;padding-top:10px;margin-right:15px;color:gray;" ng-click="editQuestion(questions)">Edit Question</span>
@@ -80,7 +82,7 @@
                                             <div class="row">
                                                 <div class="col-xs-12">
                                                     <img class="userIcon" src="{{qna.imgUrl}}" /><b>{{qna.name}}</b>
-                                                    <p class="roastTime">{{qna.createdOn | date:'d MMM h:m a'}}</p>
+                                                    <p class="roastTime">{{qna.createdOn | date:'d MMM h:mm a'}}</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -88,7 +90,8 @@
                                         <div class="col-xs-12" style="font-size:12px;
         margin-top:20px;">
                                                     <div>
-                                                        <span class="pull-left replyBtn" ng-click="replyQ(qna)">Reply</span><span class="pull-left replyBtn" ng-click="goToRepliesQ(qna)">Comments</span>
+                                                        <span class="pull-left replyBtn" ng-click="replyQ(qna)">Reply</span><span class="pull-left replyBtn" ng-click="goToRepliesQ(qna)">Comments 
+                                                            <b>{{qna.replyCount}}+</b></span>
                                                         <span class="pull-left replyBtn" ng-click="editQComment(qna)">Edit</span>
                                                         <!-- <div class="appreciateBtn hand pull-right" ng-class="appreciated?'appreciatedBtn':'appreciateBtn'" ng-click="appreciate(qna)">{{appriValue}}</div><span class="appriNo pull-right">123</span> -->
                                                     </div>
