--- a/client/views/roastPage.html
+++ b/client/views/roastPage.html
@@ -39,7 +39,7 @@
                                             <div class="row">
                                                 <div class="col-xs-12">
                                                     <img class="userIcon" src="{{roast.imgUrl}}" /><b>{{roast.name}}</b>
-                                                    <p class="roastTime">{{roast.createdOn | date:'d MMM h:m a'}}</p>
+                                                    <p class="roastTime">{{roast.createdOn | date:'d MMM h:mm a'}}</p>
                                                 </div>
                                             </div>
                                         </div>
