--- a/client/views/roastTrending.html
+++ b/client/views/roastTrending.html
@@ -8,7 +8,7 @@
 		            		Trending Now
 		            	</div>
 		            </div>
-	                <div class="col-xs-12 trendBlock hand" ng-repeat="trends in trending.slice().reverse()">
+	                <div class="col-xs-12 trendBlock hand" ng-repeat="trends in trending">
 	                    <div class="row" ng-click="goToRoast(trends)">
 	                        <div class="col-xs-4">
 	                            <img src="https://yt3.ggpht.com/-QSdUl6wilzo/AAAAAAAAAAI/AAAAAAAAAAA/BGrQrNGDA8U/s900-c-k-no/photo.jpg" class="roasteeImg" />
@@ -47,10 +47,10 @@
 	                        </div>
 	                    </div>
 	                </div>
-	                <div class="col-xs-12 trendBlock hand" ng-repeat="question in questions.slice().reverse()">
+	                <div class="col-xs-12 trendBlock hand" ng-repeat="question in questions">
 	                    <div class="row" ng-click="goToDebate(question)">
 	                         <div class="col-xs-12">
-                                <p class="qFont"><b>Q.</b> {{question.question}} ?</p>
+                                <p class="qFont"><b>Q.</b>{{question.question}}?</p>
                             </div>
                             <div class="col-xs-12">
                             	<div class="voteBtn">
