--- a/client/appResources/styles/style.css
+++ b/client/appResources/styles/style.css
@@ -512,11 +512,17 @@ textarea.form-control.textAreaActive {
     }
 }
 
-/* styles for QandA page ends here /*
+/* styles for Home page ends here */
 
+.msgUnread{
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+    background-color: #ABE6CE;
+    padding-top: 30px;
+}
 
-
-/* styles for QandA category page  /*
+/* styles for Home category page  /*
 
 
 
