--- a/client/views/home.html
+++ b/client/views/home.html
@@ -9,10 +9,10 @@
 			<div class="col-xs-12 trendBlock hand" ng-repeat="notif in notifications | orderBy: '-time'">
 	            <div class="row" ng-click="goToLoc(notif)">
 	                <div class="col-xs-2">
-	                	<img src="{{notif.imgUrl}}" style="width:50px;margin-top:-8px;" />
+	                	<img src="{{notif.imgUrl}}" style="width:50px;margin-top:-12px;" />
 	                </div>
 	                <div class="col-xs-10">
-                        <p class="qFont">{{notif.msg}}</p>
+                        <p style="font-size:18px;margin-top:-16px;">{{notif.msg}}</p>
                     </div>
 	            </div>
 	        </div>
