--- a/client/views/QandAlist.html
+++ b/client/views/QandAlist.html
@@ -6,18 +6,17 @@
 		      		Recent Questions
           		</div>
           	</div>
-			<div class="col-xs-12 trendBlock hand" ng-repeat="question in questions.slice().reverse()">
-	            <div class="row" ng-click="goToDebate(question)">
-	                <div class="col-xs-12">
-                        <p class="qFont"><b>Q.</b>{{question.question}}?</p>
-                    </div>
-                    <div class="col-xs-12">
-                       	<div class="voteBtn">
-                            View Answers
-                        </div>
-                    </div>
-	            </div>
-	        </div>
+			<div class="col-xs-12 trendBlock hand" ng-repeat="question in questions">
+	                    <div class="row" ng-click="goToDebate(question)">
+	                         <div class="col-xs-12">
+                                <p class="qFont"><b>Q.</b> {{question.question}}?</p>
+                            </div>
+                            <div class="col-xs-12" style="color:gray">
+                            	<span>By - {{question.createdBy}}</span>
+                            	<span class="pull-right">Views - {{question.views}}</span>
+                            </div>
+	                    </div>
+	                </div>
 		</div>
 	</div>
 </div>
