--- a/client/views/roastTrending.html
+++ b/client/views/roastTrending.html
@@ -50,12 +50,11 @@
 	                <div class="col-xs-12 trendBlock hand" ng-repeat="question in questions">
 	                    <div class="row" ng-click="goToDebate(question)">
 	                         <div class="col-xs-12">
-                                <p class="qFont"><b>Q.</b>{{question.question}}?</p>
+                                <p class="qFont"><b>Q.</b> {{question.question}}?</p>
                             </div>
-                            <div class="col-xs-12">
-                            	<div class="voteBtn">
-                                    View Answers
-                                </div>
+                            <div class="col-xs-12" style="color:gray">
+                            	<span>By - {{question.createdBy}}</span>
+                            	<span class="pull-right">Views - {{question.views}}</span>
                             </div>
 	                    </div>
 	                </div>
