--- a/client/views/QandApage.html
+++ b/client/views/QandApage.html
@@ -6,15 +6,20 @@
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <div class="row">
                             <div class="col-xs-12 borderBtm">
-                                <div class="row">
+                                <div class="row" ng-hide="editBoxQ">
                                     <p class="titleQ"><b>Q.</b> {{questions.question}}?</p>
                                 </div>
-                                <div>
+                                <div class="row" ng-if="editBoxQ" style="margin-top:15px">
+                                    <p><b>Edit your question</b></p>
+                                    <input type="text" ng-model="questions.question" class="form-control" my-maxlength="150" ng-trim="false">
+                                    <p class="pull-right mTop0" ng-if="editBoxQ" style="color:grey">{{qEditchar}} words left</p>
+                                </div>
+                                <div ng-hide="editBoxQ">
                                     <p style="margin-bottom:10px;margin-top:-15px;;text-align:right;color:gray;font-size:15px;">
                                         <b>{{questions.views}}</b> Views
                                     </p>
                                 </div>
-                                <div class="row" style="margin-bottom:10px;">
+                                <div class="row" ng-hide="editBoxQ" style="margin-bottom:10px;">
                                     <span class="pull-left hand" style="font-size:13px;padding-top:10px;margin-right:15px;color:gray;" ng-click="editQuestion(questions)">Edit Question</span>
                                     <span class="pull-right">
                                         <img class="hand" social-facebook src="../images/facebook.png"/>
@@ -30,7 +35,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div ng-if="showVoteBlock">
+                            <div ng-if="showVoteBlock" ng-hide="editBoxQ">
                                 <div class="col-xs-12" ng-hide="showVotes" style="margin-bottom:60px;">
                                     <div class="col-xs-5 voteBtn hand" ng-click="votedY()">
                                         {{questions.yBtnValue}}
@@ -75,6 +80,36 @@
                                     </div>
                                 </div>
                             </div>
+                            <div ng-if="editBoxQ">
+                                <div class="col-xs-12" style="margin-bottom:60px;" ng-hide="showtext">
+                                    <div class="col-xs-5 voteBtn hand" ng-click="editY()">
+                                        {{questions.yBtnValue}}
+                                        <p align="center" class="editVoteBtn">click to Customize</p>
+                                    </div>
+                                    <div class="col-xs-5 col-xs-offset-2 voteBtn hand" ng-click="editY()" style="background-color:red">
+                                        {{questions.nBtnValue}}
+                                        <p align="center" class="editVoteBtn">Click to Customize</p>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12" style="margin-bottom:60px;margin-top:10px" ng-if="showtext">
+                                    <div class="col-xs-5">
+                                        <div class="row">
+                                            <input type="text" class="form-control" my-maxlength="10" ng-trim="false" ng-model="questions.yBtnValue" placeholder="Text for Vote Button">
+                                            <p class="pull-right mTop0" style="color:grey;margin-bottom:10px;">{{yChar}} words left</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-5 col-xs-offset-2" ng-if="showtext">
+                                        <div class="row">
+                                            <input type="text" class="form-control" my-maxlength="10" ng-trim="false" ng-model="questions.nBtnValue" placeholder="Text for Vote Button">
+                                            <p class="pull-right mTop0" style="color:grey;margin-bottom:10px;">{{nChar}} words left</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12" ng-if="editBoxQ" style="margin-top:-10px">
+                                        <button type="btn" style="background-color:#009688;color:#fff;min-width:90px;" class="btn btn-default pull-right" ng-click="updateQuestion()" ng-disabled="btnDisable">Update Question</button>
+                                        <button type="btn" style="margin-right:10px" ng-click="hideTextArea()" class="btn btn-default pull-right">Cancel</button>                   
+                                </div>
+                            </div>
                             <div class="col-xs-12 roastDiv" ng-repeat="qna in QandA | orderBy:'-createdOn' track by $index">
                                 <div class="row">
                                     <div class="row">
@@ -113,7 +148,6 @@
                                                 <div class="col-xs-12">
                                                     <div class="col-xs-12 col-sm-10 col-md-6 col-lg-6 mLeft48">
                                                         <p class="pull-right mTop0" ng-hide="editBoxQ" style="color:grey">{{qCommentChar}} words left</p>
-                                                        <p class="pull-right mTop0" ng-if="editBoxQ" style="color:grey">{{qCommentChar}} words left</p>
                                                     </div>
                                                 </div>
                                                 <div class="col-xs-4" ng-hide="editBoxQ">
@@ -124,12 +158,6 @@
                                                     <div class="col-xs-12 col-sm-10 col-md-4 col-lg-3 mLeft48">
                                                         <button type="btn" ng-hide="editBox || editBoxQ" style="background-color:#009688;color:#fff;width:90px;" class="btn btn-default pull-right" ng-click="post()" ng-disabled="btnDisable">Post</button>
                                                         <button type="btn" ng-if="editBox" style="background-color:#009688;color:#fff;width:90px;" class="btn btn-default pull-right" ng-click="updateQcomment()" ng-disabled="btnDisable">Update</button>
-                                                        <button type="btn" style="margin-right:10px" ng-click="hideTextArea()" class="btn btn-default pull-right">Cancel</button>
-                                                    </div>
-                                                </div>
-                                                <div class="col-xs-12" ng-if="editBoxQ" >
-                                                    <div class="col-xs-12 col-sm-10 col-md-7 col-lg-6 mLeft48">
-                                                        <button type="btn" style="background-color:#009688;color:#fff;min-width:90px;" class="btn btn-default pull-right" ng-click="updateQuestion()" ng-disabled="btnDisable">Update Question</button>
                                                         <button type="btn" style="margin-right:10px" ng-click="hideTextArea()" class="btn btn-default pull-right">Cancel</button>
                                                     </div>
                                                 </div>
