--- a/client/views/replyComments.html
+++ b/client/views/replyComments.html
@@ -15,6 +15,9 @@
                                         </div>
                                     </div>
                                 <div class="col-xs-12 roastText">{{reply.comment}}</div>
+                                <div class="col-xs-12" style="margin-top:5px;margin-bottom:-25px;color:gray">
+                                    <p class="pull-right hand" ng-click="editQComment(reply)">edit comment</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -35,6 +38,9 @@
                                             </div>
                                         </div>
                                         <div class="col-xs-12 roastText">{{qna.comment}}</div> 
+                                        <div class="col-xs-12" style="margin-top:5px;margin-bottom:-15px;color:gray">
+                                            <p class="pull-right hand" ng-click="editQReply(qna)">edit comment</p>
+                                        </div>
                                     </div>
                                 </div>
                     </div>
@@ -59,7 +65,8 @@
                                                 </div>
                                                 <div class="col-xs-8">
                                                     <div class="col-xs-12 col-sm-10 col-md-4 col-lg-3 mLeft48">
-                                                        <button type="btn" style="background-color:#009688;color:#fff;width:90px;" class="btn btn-default pull-right" ng-click="postReplyQ()" ng-disabled="btnDisable">Post</button>
+                                                        <button type="btn" ng-hide="editBox" style="background-color:#009688;color:#fff;width:90px;" class="btn btn-default pull-right" ng-click="postReplyQ()" ng-disabled="btnDisable">Post</button>
+                                                        <button type="btn" ng-if="editBox" style="background-color:#009688;color:#fff;width:90px;" class="btn btn-default pull-right" ng-click="updateQcomment()" ng-disabled="btnDisable">Update</button>
                                                         <button type="btn" style="margin-right:10px" ng-click="hideTextArea()" class="btn btn-default pull-right">Cancel</button>
                                                     </div>
                                                 </div>
